refact: change clean arch to hexagonal arch
